package com.zava8.heksuletr.fragments;
import android.app.Activity;
import android.view.View;
import android.widget.AdapterView;
public class c_handle_decimal_spinboks extends Activity implements AdapterView.OnItemSelectedListener {
    public void onItemSelected(AdapterView<?> parent, View view, int pos, long id) { }
    public void onNothingSelected(AdapterView<?> parent) { }
}