package com.zava8.heksuletr.model;

public class CalculationModel {
}

